# rag-indexer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  consumer.py  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/plans/: 2026-02-24-e2e-shakedown-design.md  2026-02-24-e2e-shakedown-plan.md  2026-02-24-e2e-tests-design.md  2026-02-24-e2e-tests-plan.md
rag_indexer/: __init__.py  __main__.py  config.py  errors.py  logging.py  main.py  metrics.py  models.py  processing.py  rag_client.py  transport.py
scripts/: dlq_replay.py  producer.py
tests/: conftest.py  test_consumer.py  test_processing.py  test_rag_client.py  test_transport.py
tests/e2e/: conftest.py  mock_rag_server.py  run_cozy_e2e.sh  test_e2e.py
tests/integration/: conftest.py  test_main_e2e.py  test_rag_stub.py  test_retry_cycle.py
tests/unit/: test_errors.py  test_logging.py  test_processing.py  test_rag_client.py
